--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Responsive</title>
-  <link rel="stylesheet" href="./css/reset.css">
-  <link rel="stylesheet" href="./css/base.css">
+  <link rel="stylesheet" href="css/css/reset.css">
+  <link rel="stylesheet" href="css/css/base.css">
+  <link rel="stylesheet" href="css/css/style.css">
 </head>
 
 <body>
-  <h2 class="question--title">Q7 サイズ変更</h2>
+  <h2 class="question--title">Q1 サイズ変更</h2>
+  <div class="box"></div>
   <h2 class="question--title">Q2 色変更</h2>
   <h2 class="question--title">Q3 margin値の変更</h2>
   <h2 class="question--title">Q4 floatの解除</h2>
