--- a/index.html
+++ b/index.html
@@ -6,20 +6,33 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Responsive</title>
-  <link rel="stylesheet" href="css/css/reset.css">
-  <link rel="stylesheet" href="css/css/base.css">
-  <link rel="stylesheet" href="css/css/style.css">
+  <link rel="stylesheet" href="./css/reset.css">
+  <link rel="stylesheet" href="./css/base.css">
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
-  <h2 class="question--title">Q1 サイズ変更</h2>
-  <div class="box"></div>
-  <h2 class="question--title">Q2 色変更</h2>
-  <h2 class="question--title">Q3 margin値の変更</h2>
-  <h2 class="question--title">Q4 floatの解除</h2>
-  <h2 class="question--title">Q5 flexboxの入れ替え(逆順)</h2>
-  <h2 class="question--title">Q6 flexboxの入れ替え(指定)</h2>
-  <h2 class="question--title">Q7 要素の表示・非表示</h2>
+  <div class="warapper">
+    <h2 class="question--title">Q1 サイズ変更</h2>
+    <div class="size-chenge-box">
+      <div class="red-box"></div>
+    </div>
+    <h2 class="question--title">Q2 色変更</h2>
+    <div class="chenge-color-box"></div>
+    <h2 class="question--title">Q3 margin値の変更</h2>
+    <div class="margin-change-box">
+      <div class="blue-box"></div>
+      <div class="green-box"></div>
+    </div>
+    <h2 class="question--title">Q4 floatの解除</h2>
+    <div class="float-cancellation">
+      <div class="red--box"></div>
+      <div class="blue-box"></div>
+    </div>
+    <h2 class="question--title">Q5 flexboxの入れ替え(逆順)</h2>
+    <h2 class="question--title">Q6 flexboxの入れ替え(指定)</h2>
+    <h2 class="question--title">Q7 要素の表示・非表示</h2>
+  </div>
 </body>
 
 </html>
