--- a/index.html
+++ b/index.html
@@ -27,11 +27,23 @@
     <h2 class="question--title">Q4 floatの解除</h2>
     <div class="float-cancellation">
       <div class="red--box"></div>
-      <div class="blue-box"></div>
+      <div class="blue--box"></div>
+      <div class="clear-fix"></div>
     </div>
     <h2 class="question--title">Q5 flexboxの入れ替え(逆順)</h2>
+    <div class="reverse-flexbox">
+      <div class="reverse-red-box">A</div>
+      <div class="reverse-blue-box">B</div>
+      <div class="reverse-orange-box">C</div>
+    </div>
     <h2 class="question--title">Q6 flexboxの入れ替え(指定)</h2>
+    <div class="replacement-flexbox">
+      <div class="replacement-green-box">A</div>
+      <div class="replacement-yellowbox">B</div>
+      <div class="replacement-pinkbox">C</div>
+    </div>
     <h2 class="question--title">Q7 要素の表示・非表示</h2>
+    </div>
   </div>
 </body>
 
