--- a/index.html
+++ b/index.html
@@ -32,9 +32,15 @@
     </div>
     <h2 class="question--title">Q5 flexboxの入れ替え(逆順)</h2>
     <div class="reverse-flexbox">
-      <div class="reverse-red-box">A</div>
-      <div class="reverse-blue-box">B</div>
-      <div class="reverse-orange-box">C</div>
+      <div class="reverse-red-box">
+        <div class="containerA">A</div>
+      </div>
+      <div class="reverse-blue-box">
+        <div class="containerB">B</div>
+      </div>
+      <div class="reverse-orange-box">
+        <div class="containerC">C</div>
+      </div>
     </div>
     <h2 class="question--title">Q6 flexboxの入れ替え(指定)</h2>
     <div class="replacement-flexbox">
