--- a/index.html
+++ b/index.html
@@ -25,10 +25,9 @@
       <div class="green-box"></div>
     </div>
     <h2 class="question--title">Q4 floatの解除</h2>
-    <div class="float-cancellation">
+    <div class="float-cancellation clearfix">
       <div class="red--box"></div>
       <div class="blue--box"></div>
-      <div class="clear-fix"></div>
     </div>
     <h2 class="question--title">Q5 flexboxの入れ替え(逆順)</h2>
     <div class="reverse-flexbox">
@@ -44,13 +43,24 @@
     </div>
     <h2 class="question--title">Q6 flexboxの入れ替え(指定)</h2>
     <div class="replacement-flexbox">
-      <div class="replacement-green-box">A</div>
-      <div class="replacement-yellowbox">B</div>
-      <div class="replacement-pinkbox">C</div>
+      <div class="replacement-green-box">
+        <div class="containerA">A</div>
+      </div>
+      <div class="replacement-yellowbox">
+        <div class="containerB">B</div>
+      </div>
+      <div class="replacement-pinkbox">
+        <div class="containerC">C</div>
+      </div>
     </div>
     <h2 class="question--title">Q7 要素の表示・非表示</h2>
+    <div class="display-hidden">
+      <div class="display-red-box"></div>
+      <div class="display-green-box"></div>
+      <div class="display-blue-box"></div>
     </div>
   </div>
+</div>
 </body>
 
 </html>
