--- a/index.html
+++ b/index.html
@@ -30,6 +30,17 @@
       <div class="blue--box"></div>
     </div>
     <h2 class="question--title">Q5 flexboxの入れ替え(逆順)</h2>
+    <div class="before-reverse">
+      <div class="reverse-red-box">
+        <div class="containerA">A</div>
+      </div>
+      <div class="reverse-blue-box">
+        <div class="containerB">B</div>
+      </div>
+      <div class="reverse-orange-box">
+        <div class="containerC">C</div>
+      </div>
+    </div>
     <div class="reverse-flexbox">
       <div class="reverse-red-box">
         <div class="containerA">A</div>
